[package]
name = "alien-debug-session"
version.workspace = true
edition = "2021"
description = "Shared types + cloud-credential translator for `alien debug` sessions. Used by the CLI, the manager (push mode), and the agent (pull mode)."
license-file.workspace = true

[dependencies]
serde = { workspace = true, features = ["derive"] }
alien-core = { workspace = true }
alien-aws-clients = { workspace = true }
alien-gcp-clients = { workspace = true }
alien-azure-clients = { workspace = true }
alien-error = { workspace = true }
thiserror = { workspace = true }
