[package]
name = "alien-gateway"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license-file.workspace = true

[lib]
crate-type = ["rlib"]

[[bin]]
name = "alien-ai-gateway"
path = "src/bin/alien-ai-gateway.rs"

[dependencies]
alien-core = { workspace = true }
alien-bindings = { workspace = true, default-features = false, features = ["aws", "gcp", "azure"] }
alien-error = { workspace = true, features = ["axum"] }
tokio = { workspace = true, features = ["net", "rt-multi-thread", "macros"] }
axum = { workspace = true, features = ["http1", "tokio", "json"] }
reqwest = { workspace = true, features = ["json", "stream", "blocking", "rustls-tls-webpki-roots"] }
futures = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
base64 = { workspace = true }
tracing = { workspace = true }
aws-config = { workspace = true }
aws-sigv4 = { workspace = true }
aws-credential-types = { workspace = true }
aws-smithy-eventstream = { workspace = true }
aws-smithy-types = { workspace = true }
http = { workspace = true }

[dev-dependencies]
httpmock = { workspace = true }
temp-env = { workspace = true }
