[package]
name = "alien-helm"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Helm chart generation for Alien stacks"
license-file.workspace = true

[features]
default = []
test-utils = ["dep:tempfile"]

[dependencies]
alien-core = { workspace = true }
alien-error = { workspace = true }
indexmap = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tempfile = { workspace = true, optional = true }

[dev-dependencies]
insta = { workspace = true }
