[package]
name = "alien-helm"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Helm chart generation for Alien stacks"
license-file.workspace = true

[features]
default = []
test-utils = ["dep:tempfile"]

[dependencies]
alien-core = { workspace = true }
alien-error = { workspace = true }
indexmap = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tempfile = { workspace = true, optional = true }

[dev-dependencies]
insta = { workspace = true }
# Activate the `test-utils` feature for unit tests so the gated `test_utils`
# module compiles (it pulls in the optional `tempfile` dep).
alien-helm = { path = ".", features = ["test-utils"] }
