[package]
name = "alien-helm"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Helm chart generation for Alien stacks"
license-file.workspace = true

[features]
default = []
test-utils = ["dep:tempfile"]

[dependencies]
alien-core = { workspace = true }
alien-error = { workspace = true }
indexmap = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tempfile = { workspace = true, optional = true }

[dev-dependencies]
insta = { workspace = true }
tempfile = { workspace = true }
# Activate the `test-utils` feature so external integration tests can reach
# `alien_helm::test_utils::*` (the module is gated on `test-utils`).
alien-helm = { path = ".", features = ["test-utils"] }
