[package]
name = "alien-infra"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true

[features]
default = []  # Minimal default, let consumers choose
all-platforms = ["aws", "gcp", "azure", "kubernetes", "local", "test"]  # Convenience feature for all providers
aws = ["dep:alien-aws-clients", "dep:alien-preflights", "alien-client-config/aws"]  # TODO: Remove preflights from here, necessary because of CF
gcp = ["dep:alien-gcp-clients", "alien-client-config/gcp"]
azure = ["dep:alien-azure-clients", "alien-client-config/azure"]
kubernetes = ["dep:alien-k8s-clients", "dep:base64", "dep:dirs", "alien-client-config/kubernetes"]
local = ["dep:alien-local"]  # Local platform support
test = []  # Test platform support - fast mock implementations without real cloud APIs
openapi = ["dep:utoipa", "alien-core/openapi"]
test-utils = [
    "alien-core/test-utils",
    "alien-aws-clients/test-utils",
    "alien-gcp-clients/test-utils", 
    "alien-azure-clients/test-utils",
    "alien-client-config/test-utils",
    "dep:alien-preflights"
]

[lib]
crate-type = ["rlib"]

[dependencies]
alien-core = { workspace = true }
alien-error = { workspace = true }
alien-client-core = { workspace = true }
alien-client-config = { workspace = true }
alien-aws-clients = { workspace = true, optional = true }
alien-gcp-clients = { workspace = true, optional = true }
alien-azure-clients = { workspace = true, optional = true }
alien-k8s-clients = { workspace = true, optional = true }
alien-local = { workspace = true, optional = true }
alien-macros = { workspace = true }
alien-permissions = { workspace = true }
horizon-client-sdk = { workspace = true }

bon = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
petgraph = { workspace = true }
typetag = { workspace = true }
tracing = { workspace = true }
utoipa = { workspace = true, optional = true }
tokio = { workspace = true, features = ["sync", "macros", "io-util", "rt", "time"] }
async-trait = { workspace = true }
indexmap = { workspace = true, features = ["serde"] }
reqwest = { workspace = true, features = ["json", "rustls-tls-webpki-roots"] }
futures-util = { workspace = true }
heck = { workspace = true }
serde_yaml = { workspace = true }
uuid = { workspace = true, features = ["v4", "v5", "serde"] }
k8s-openapi = { version = "0.25.0", features = ["v1_33"] }
alien-preflights = { workspace = true, optional = true }
pem = { workspace = true }
p12 = "0.6"

# Kubeconfig dependencies
base64 = { workspace = true, optional = true }
dirs = { workspace = true, optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
js-sys = { workspace = true }
getrandom = { workspace = true, features = ["wasm_js"] }
console_error_panic_hook = { workspace = true }

[dev-dependencies]
alien-infra = { path = ".", features = ["test-utils"] }
alien-preflights = { workspace = true }
alien-aws-clients = { workspace = true }
alien-gcp-clients = { workspace = true }
alien-azure-clients = { workspace = true }
alien-k8s-clients = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true, features = ["json", "rustls-tls-webpki-roots"] }
serde_json = { workspace = true, features = ["preserve_order"] }
tempfile = { workspace = true }
insta = { workspace = true, features = ["yaml", "json"] }
workspace_root = { workspace = true }
dotenvy = { workspace = true }
anyhow = { workspace = true }
test-context = { workspace = true }
regex = { workspace = true }
httpmock = { version = "0.7" }
rstest = { workspace = true }
axum = { workspace = true }
mockall = { workspace = true }
tracing-subscriber = { workspace = true }
