[package]
name = "alien-infra"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license-file.workspace = true

[features]
default = []  # Minimal default, let consumers choose
all-platforms = ["aws", "gcp", "azure", "kubernetes", "local", "test"]  # Convenience feature for all providers
aws = [
    "dep:alien-preflights",
    "dep:aws-config",
    "dep:aws-credential-types",
    "dep:aws-sdk-acm",
    "dep:aws-sdk-apigatewayv2",
    "dep:aws-sdk-codebuild",
    "dep:aws-sdk-dynamodb",
    "dep:aws-sdk-ec2",
    "dep:aws-sdk-ecr",
    "dep:aws-sdk-eventbridge",
    "dep:aws-sdk-iam",
    "dep:aws-sdk-lambda",
    "dep:aws-sdk-s3",
    "dep:aws-sdk-sqs",
    "dep:aws-sdk-ssm",
    "dep:aws-types",
    "alien-client-config/aws"
]  # TODO: Remove preflights from here, necessary because of CF
gcp = [
    "alien-client-config/gcp",
    "dep:base64",
    "dep:google-cloud-api-serviceusage-v1",
    "dep:google-cloud-artifactregistry-v1",
    "dep:google-cloud-auth",
    "dep:google-cloud-compute-v1",
    "dep:google-cloud-firestore-admin-v1",
    "dep:google-cloud-gax",
    "dep:google-cloud-iam-admin-v1",
    "dep:google-cloud-iam-v1",
    "dep:google-cloud-longrunning",
    "dep:google-cloud-pubsub",
    "dep:google-cloud-resourcemanager-v3",
    "dep:google-cloud-run-v2",
    "dep:google-cloud-scheduler-v1",
    "dep:google-cloud-storage",
    "dep:google-cloud-type",
    "dep:wkt",
]
azure = [
    "alien-client-config/azure",
    "dep:azure_core",
    "dep:azure_core_021",
    "dep:azure_identity",
    "dep:azure_mgmt_app",
    "dep:azure_mgmt_authorization",
    "dep:azure_mgmt_containerregistry",
    "dep:azure_mgmt_keyvault",
    "dep:azure_mgmt_msi",
    "dep:azure_mgmt_network",
    "dep:azure_mgmt_resources",
    "dep:azure_mgmt_servicebus",
    "dep:azure_mgmt_storage",
    "dep:base64",
]
kubernetes = ["dep:kube", "dep:base64", "dep:dirs", "alien-client-config/kubernetes"]
local = ["dep:alien-local"]  # Local platform support
test = []  # Test platform support - fast mock implementations without real cloud APIs
openapi = ["dep:utoipa", "alien-core/openapi"]
test-utils = [
    "alien-core/test-utils",
    "alien-client-config/test-utils",
    "dep:alien-preflights",
    "dep:mockall"
]

[lib]
crate-type = ["rlib"]

[dependencies]
alien-core = { workspace = true }
alien-error = { workspace = true }
alien-client-core = { workspace = true }
alien-client-config = { workspace = true }
google-cloud-api-serviceusage-v1 = { workspace = true, optional = true }
google-cloud-artifactregistry-v1 = { workspace = true, optional = true }
google-cloud-auth = { workspace = true, optional = true }
google-cloud-compute-v1 = { workspace = true, optional = true }
google-cloud-firestore-admin-v1 = { workspace = true, optional = true }
google-cloud-gax = { workspace = true, optional = true }
google-cloud-iam-admin-v1 = { workspace = true, optional = true }
google-cloud-iam-v1 = { workspace = true, optional = true }
google-cloud-longrunning = { workspace = true, optional = true }
google-cloud-pubsub = { workspace = true, optional = true }
google-cloud-resourcemanager-v3 = { workspace = true, optional = true }
google-cloud-run-v2 = { workspace = true, optional = true }
google-cloud-scheduler-v1 = { workspace = true, optional = true }
google-cloud-storage = { workspace = true, optional = true }
google-cloud-type = { workspace = true, optional = true }
wkt = { workspace = true, optional = true }
azure_core = { workspace = true, optional = true }
azure_core_021 = { workspace = true, optional = true }
azure_identity = { workspace = true, optional = true }
azure_mgmt_app = { workspace = true, optional = true }
azure_mgmt_authorization = { workspace = true, optional = true }
azure_mgmt_containerregistry = { workspace = true, optional = true }
azure_mgmt_keyvault = { workspace = true, optional = true }
azure_mgmt_msi = { workspace = true, optional = true }
azure_mgmt_network = { workspace = true, optional = true }
azure_mgmt_resources = { workspace = true, optional = true }
azure_mgmt_servicebus = { workspace = true, optional = true }
azure_mgmt_storage = { workspace = true, optional = true }
aws-config = { workspace = true, optional = true }
aws-credential-types = { workspace = true, optional = true }
aws-sdk-acm = { workspace = true, optional = true }
aws-sdk-apigatewayv2 = { workspace = true, optional = true }
aws-sdk-codebuild = { workspace = true, optional = true }
aws-sdk-dynamodb = { workspace = true, optional = true }
aws-sdk-ec2 = { workspace = true, optional = true }
aws-sdk-ecr = { workspace = true, optional = true }
aws-sdk-eventbridge = { workspace = true, optional = true }
aws-sdk-iam = { workspace = true, optional = true }
aws-sdk-lambda = { workspace = true, optional = true }
aws-sdk-s3 = { workspace = true, optional = true }
aws-sdk-sqs = { workspace = true, optional = true }
aws-sdk-ssm = { workspace = true, optional = true }
aws-types = { workspace = true, optional = true }
alien-helm = { workspace = true }
alien-local = { workspace = true, optional = true }
alien-macros = { workspace = true }
alien-permissions = { workspace = true }

bon = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
petgraph = { workspace = true }
tracing = { workspace = true }
utoipa = { workspace = true, optional = true }
tokio = { workspace = true, features = ["sync", "macros", "io-util", "process", "rt", "time"] }
async-trait = { workspace = true }
indexmap = { workspace = true, features = ["serde"] }
reqwest = { workspace = true, features = ["json", "rustls-tls-webpki-roots"] }
futures = { workspace = true }
futures-util = { workspace = true }
heck = { workspace = true }
sha2 = { workspace = true }
serde_yaml = { workspace = true }
uuid = { workspace = true, features = ["v4", "v5", "serde"] }
k8s-openapi = { version = "0.25.0", features = ["v1_33"] }
kube = { workspace = true, optional = true }
http = { workspace = true }
secrecy = { workspace = true }
alien-preflights = { workspace = true, optional = true }
mockall = { workspace = true, optional = true }
pem = { workspace = true }
p12 = "0.6"

# Kubeconfig dependencies
base64 = { workspace = true, optional = true }
dirs = { workspace = true, optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
js-sys = { workspace = true }
getrandom = { workspace = true, features = ["wasm_js"] }
console_error_panic_hook = { workspace = true }

[dev-dependencies]
alien-infra = { path = ".", features = ["test-utils"] }
alien-preflights = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true, features = ["json", "rustls-tls-webpki-roots"] }
serde_json = { workspace = true, features = ["preserve_order"] }
tempfile = { workspace = true }
insta = { workspace = true, features = ["yaml", "json"] }
workspace_root = { workspace = true }
dotenvy = { workspace = true }
anyhow = { workspace = true }
test-context = { workspace = true }
regex = { workspace = true }
httpmock = { version = "0.7" }
rstest = { workspace = true }
axum = { workspace = true }
mockall = { workspace = true }
tower-test = { workspace = true }
tracing-subscriber = { workspace = true }
aws-smithy-mocks = { workspace = true }
aws-smithy-async = { workspace = true, features = ["rt-tokio"] }
aws-sdk-acm = { workspace = true, features = ["test-util"] }
aws-sdk-codebuild = { workspace = true, features = ["test-util"] }
aws-sdk-dynamodb = { workspace = true, features = ["test-util"] }
aws-sdk-ecr = { workspace = true, features = ["test-util"] }
aws-sdk-eventbridge = { workspace = true, features = ["test-util"] }
aws-sdk-sqs = { workspace = true, features = ["test-util"] }
aws-sdk-ssm = { workspace = true, features = ["test-util"] }
