[package]
name = "alien-local"
version.workspace = true
edition = "2021"
license-file.workspace = true
[dependencies]
libc = "0.2"
# Alien crates
alien-core = { workspace = true }
alien-error = { workspace = true }
alien-worker-runtime = { workspace = true }
alien-bindings = { workspace = true }
alien-worker-protocol = { workspace = true }

# Async runtime
tokio = { workspace = true, features = ["full"] }
async-trait = { workspace = true }
futures = { workspace = true }

# Serialization
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

# Database
# Format probe for the localkv.v1 store in KV health checks. Needs
# `experimental_multiprocess_wal` (0.7-pre only) to probe a store other
# processes hold open; the exact pin and rationale live in the workspace
# Cargo.toml.
turso = { workspace = true }
# Embedded Postgres for the Local platform (downloads + runs native binaries)
postgresql_embedded = { workspace = true }
# Installs the pgvector extension into the embedded server from Alien's release host
postgresql_extensions = { workspace = true }
# Generated database passwords
rand = { workspace = true }

# Object storage
object_store = { workspace = true, features = ["http"] }

# Docker client
bollard = { workspace = true }
bytes = { workspace = true }
futures-util = { workspace = true }

# Logging
tracing = { workspace = true }

# Time
chrono = { workspace = true, features = ["serde"] }

# Trigger service
cron = "0.15"
notify = "7"
uuid = { workspace = true, features = ["v4"] }
prost-types = "0.13"

# Port allocation
port_check = { workspace = true }

# OCI image extraction
dockdash = { workspace = true }

# HTTP client
reqwest = { workspace = true, features = ["json"] }

# URL encoding
urlencoding = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Container registry
container-registry = { workspace = true, features = ["test-support"] }
# Secret type used by container-registry auth
sec = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
bytes = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "time", "sync"] }
tokio-postgres = { workspace = true }
dockdash = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
workspace_root = { workspace = true }
alien-build = { workspace = true }
