[package]
name = "alien-macros"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Procedural macros for the Alien framework"
license-file.workspace = true

[lib]
proc-macro = true

[dependencies]
quote = { workspace = true }
syn = { workspace = true } 
proc-macro2 = "1"
