[package]
name = "alien-manager"
version.workspace = true
edition = "2021"
description = "Alien manager - control plane for Alien applications"
license = "MIT"

[[bin]]
name = "alien-manager"
path = "src/bin/main.rs"

[lib]
name = "alien_manager"
path = "src/lib.rs"

[[bin]]
name = "alien-manager-schema-exporter"
path = "src/bin/schema_exporter.rs"
required-features = ["openapi"]

[features]
default = ["sqlite", "platform"]
sqlite = ["turso", "sea-query", "aegis"]
platform = ["alien-platform-api", "alien-client-config", "jwt-simple", "urlencoding"]
openapi = ["utoipa", "alien-core/openapi", "alien-error/openapi", "alien-commands/openapi"]

[dependencies]
# Core Alien crates
alien-core = { workspace = true }
alien-error = { workspace = true, features = ["axum"] }
alien-commands = { workspace = true, features = ["server", "test-utils"] }
alien-bindings = { workspace = true, features = ["local", "all-platforms"] }
alien-deployment = { workspace = true }
alien-infra = { workspace = true, features = ["test-utils"] }
alien-local = { workspace = true }

# Platform API (optional, default)
alien-platform-api = { workspace = true, optional = true }
alien-client-config = { workspace = true, optional = true }

# Web framework
axum = { workspace = true, features = ["tokio", "http2", "json", "query", "macros"] }
tower-http = { version = "0.6.2", features = ["cors"] }

# Async runtime
async-trait = { workspace = true }
tokio = { workspace = true, features = ["full"] }

# Serialization
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
base64 = { workspace = true }

# Crypto
sha2 = { workspace = true }
hex = { workspace = true }

# Time
chrono = { workspace = true, features = ["serde"] }

# IDs
uuid = { workspace = true, features = ["v4"] }
nanoid = { workspace = true }
rand = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }

# HTTP
http = { workspace = true }
reqwest = { workspace = true, features = ["json"] }

# URL
url = { workspace = true }
form_urlencoded = { workspace = true }

# SQLite (optional, default)
turso = { workspace = true, optional = true }
sea-query = { workspace = true, optional = true }
aegis = { workspace = true, optional = true }

# Telemetry parsing
prost = { workspace = true }
prost-types = { workspace = true }

# Binary data
bytes = { workspace = true }

# OpenAPI (optional)
utoipa = { workspace = true, features = ["axum_extras", "chrono"], optional = true }

# CLI (for schema exporter binary)
clap = { workspace = true, features = ["derive", "env"] }

# JWT (optional, for platform DeepStore query validation)
jwt-simple = { version = "0.12.12", default-features = false, features = ["pure-rust"], optional = true }

# URL encoding (optional, for platform GCP OAuth)
urlencoding = { version = "2.1", optional = true }

# Misc
futures = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
tempfile = { workspace = true }
