[package]
name = "alien-operator"
version.workspace = true
edition = "2021"
license-file.workspace = true
publish = false
description = "Alien operator — pull-model background service that manages deployments in remote environments"

[lib]
name = "alien_operator"
path = "src/lib.rs"

[[bin]]
name = "alien-operator"
path = "src/main.rs"

[dependencies]
# Alien crates
alien-core = { workspace = true }
alien-error = { workspace = true }
alien-deployment = { workspace = true }
alien-infra = { workspace = true, features = ["all-platforms", "local"] }
alien-local = { workspace = true }
alien-client-config = { workspace = true }
alien-commands = { workspace = true, default-features = false, features = ["dispatchers"] }
alien-manager-api = { path = "../../client-sdks/manager/rust" }
# Kubernetes API access for the self-update Helm-runner Jobs (in-pod SA config).
alien-k8s-clients = { workspace = true }
k8s-openapi = { version = "0.25.0", features = ["v1_33"] }

# Async & HTTP
tokio = { workspace = true, features = ["sync", "macros", "io-util", "rt-multi-thread", "time", "net", "fs", "signal"] }
reqwest = { workspace = true, default-features = false, features = ["json", "rustls-tls-webpki-roots"] }
axum = { workspace = true, features = ["tokio", "http2"] }
opentelemetry-proto = { version = "0.30", features = ["gen-tonic-messages", "logs"] }
prost = { workspace = true }

# Database
turso = { workspace = true }
aegis = { workspace = true }

# Serialization
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

# CLI & Logging
clap = { workspace = true, features = ["derive", "env"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "json"] }

# Builder
bon = { workspace = true }

# Async
async-trait = { workspace = true }

# Utilities
chrono = { workspace = true, features = ["serde"] }
uuid = { workspace = true, features = ["v4"] }
url = { workspace = true }
hostname = { workspace = true }
tokio-util = { version = "0.7", features = ["rt"] }

# Debug-session tunnel (kubectl forwarding for pull-mode K8s `alien debug`)
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
futures = { workspace = true }
base64 = { workspace = true }

# AWS IRSA-driven re-signing for the pull-mode debug tunnel cloud-proxy path
# (lets `alien debug <pull-k8s-dep> -- aws ...` work via the operator's pod
# IRSA identity).
aws-config = "1.5"
aws-credential-types = { workspace = true }
aws-sigv4 = { workspace = true }

# rustls 0.23 requires a CryptoProvider to be selected when multiple providers
# (aws-lc-rs and ring) are pulled in transitively. Install one at startup so
# any rustls-backed client (reqwest, tokio-tungstenite, aws-sdk hyper) works
# without panicking.
rustls = { version = "0.23", default-features = false, features = ["ring"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-service = "0.7"
fs2 = "0.4"

[dev-dependencies]
tempfile = { workspace = true }
